error.txt
file:///C:/Users/USER/Desktop/CarForSale/server/src/controllers/authController.js:23
            decodedToken = { uid: 'mock-uid', email: 'mock@example.com', name: 'Mock User' } as any; 
                                                                                             ^^

SyntaxError: Unexpected identifier 'as'
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18)
    at #translate (node:internal/modules/esm/loader:468:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:515:27)

Node.js v22.14.0
